We added spring validation for our form.

--- a/basic-spring-portlet/basic-spring-portlet/src/main/webapp/WEB-INF/jsp/init.jspf
+++ b/basic-spring-portlet/basic-spring-portlet/src/main/webapp/WEB-INF/jsp/init.jspf
@@ -21,6 +21,7 @@
 <c:set var="ns"><portlet:namespace/></c:set>
 <c:set var="contextPath"><%=request.getContextPath()%></c:set>
 <c:set var="imagePath"><%=themeDisplay.getPathImage()%></c:set>
+<c:set var="errorClass" value="portlet-msg-error" />
 
 <%--
 <script type="text/javascript" language="JavaScript">
